# crs2-impl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
src/crs2/: calculation.c  calculation.h  calculation_concurrent.c  calculation_concurrent.h  calculation_distributed.c  calculation_distributed.h  calculation_sequential.c  calculation_sequential.h
src/points/: matrix.c  matrix.h  point.c  point.h
src/tests/: test_functions.c  test_functions.h
